--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,6 +24,7 @@ collections:
     # תיקיית המדיה יתווספו בתוך תיקיית כל פוסט (בהתאם לשם הסלאג)
     media_folder: "static/uploads/posts/{{slug}}"
     public_folder: "/uploads/posts/{{slug}}"
+    path: "{{slug}}/index"
     editor:
       preview: true
     fields:
