--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 media_folder: "static/uploads"
 public_folder: "/uploads"
 
-locale: he
+locale: he 
 site_url: "https://amireyal5.netlify.app/"
 
 publish_mode: editorial_workflow
@@ -18,18 +18,18 @@ slug:
 collections:
   - name: "posts"
     label: "פוסטים"
-    folder: "content/posts"  # תיקיית פוסטים ברבים
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
-    # תיקיית המדיה יתווספו בתוך תיקיית כל פוסט (בהתאם לשם הסלאג)
+    path: "{{slug}}/index"
+    format: "frontmatter" # ← חשוב מאוד!
     media_folder: "static/uploads/posts/{{slug}}"
     public_folder: "/uploads/posts/{{slug}}"
-    path: "{{slug}}/index"
     editor:
       preview: true
     fields:
       - { label: "כותרת", name: "title", widget: "string", required: true }
-      - { label: "תאריך", name: "date", widget: "datetime", required: true, format: "YYYY-MM-DD" }
+      - { label: "תאריך", name: "date", widget: "datetime", required: true, format: "YYYY-MM-DD", picker_utc: true }
       - { label: "מחבר", name: "author", widget: "relation", collection: "authors", search_fields: ["name"], value_field: "name", display_fields: ["name"], required: true }
       - { label: "קטגוריות", name: "categories", widget: "list", required: false }
       - { label: "תגיות", name: "tags", widget: "list", required: false }
