--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,16 +21,34 @@ collections:
     folder: "content/posts"
     create: true
     slug: "{{slug}}"
-    path: "{{slug}}/index"
-    format: "frontmatter" # ← חשוב מאוד!
     media_folder: "static/uploads/posts/{{slug}}"
     public_folder: "/uploads/posts/{{slug}}"
+    path: "{{slug}}/index"
     editor:
       preview: true
     fields:
       - { label: "כותרת", name: "title", widget: "string", required: true }
-      - { label: "תאריך", name: "date", widget: "datetime", required: true, format: "YYYY-MM-DD", picker_utc: false }
-      - { label: "מחבר", name: "author", widget: "relation", collection: "authors", search_fields: ["name"], value_field: "name", display_fields: ["name"], required: true }
+
+      - label: "תאריך"
+        name: "date"
+        widget: "datetime"
+        format: "YYYY-MM-DD"
+        date_format: "YYYY-MM-DD"
+        time_format: false
+        picker_utc: false
+        required: true
+        default: ""
+
+      - {
+          label: "מחבר",
+          name: "author",
+          widget: "relation",
+          collection: "authors",
+          search_fields: ["name"],
+          value_field: "name",
+          display_fields: ["name"],
+          required: true
+        }
       - { label: "קטגוריות", name: "categories", widget: "list", required: false }
       - { label: "תגיות", name: "tags", widget: "list", required: false }
       - { label: "תמונה ראשית", name: "thumbnail", widget: "image", required: false }
@@ -43,7 +61,17 @@ collections:
           - { label: "כותרת SEO", name: "title", widget: "string", required: false }
           - { label: "תיאור SEO", name: "description", widget: "text", required: false }
           - { label: "מילות מפתח", name: "keywords", widget: "list", required: false }
-      - { label: "פוסטים קשורים", name: "related_posts", widget: "relation", collection: "posts", search_fields: ["title"], value_field: "slug", display_fields: ["title"], multiple: true, required: false }
+      - {
+          label: "פוסטים קשורים",
+          name: "related_posts",
+          widget: "relation",
+          collection: "posts",
+          search_fields: ["title"],
+          value_field: "slug",
+          display_fields: ["title"],
+          multiple: true,
+          required: false
+        }
 
   - name: "pages"
     label: "עמודים"
