--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -63,3 +63,81 @@ collections:
           - { label: "תיאור SEO", name: "description", widget: "text", required: false }
           - { label: "מילות מפתח", name: "keywords", widget: "list", required: false }
       - { label: "פוסטים קשורים", name: "related_posts", widget: "relation", collection: "posts", search_fields: ["title"], value_field: "slug", display_fields: ["title"], multiple: true, required: false }
+      - {
+          label: "פוסטים קשורים",
+          name: "related_posts",
+          widget: "relation",
+          collection: "posts",
+          search_fields: ["title"],
+          value_field: "slug",
+          display_fields: ["title"],
+          multiple: true,
+          required: false
+        }
+
+  - name: "pages"
+    label: "עמודים"
+    files:
+      - label: "דף הבית"
+        name: "home"
+        file: "post/home/index.md"
+        media_folder: "static/uploads/home"
+        public_folder: "/uploads/home"
+        fields:
+          - { label: "כותרת", name: "title", widget: "string", required: true }
+          - { label: "תמונה ראשית", name: "hero_image", widget: "image", required: false }
+          - { label: "תוכן", name: "body", widget: "markdown", required: true }
+      - label: "אודות"
+        name: "about"
+        file: "post/about/index.md"
+        media_folder: "static/uploads/about"
+        public_folder: "/uploads/about"
+        fields:
+          - { label: "כותרת", name: "title", widget: "string", required: true }
+          - { label: "תוכן", name: "body", widget: "markdown", required: true }
+      - label: "סמכות הורית"
+        name: "parental_authority"
+        file: "post/parental-authority/index.md"
+        media_folder: "static/uploads/parental-authority"
+        public_folder: "/uploads/parental-authority"
+        fields:
+          - { label: "כותרת", name: "title", widget: "string", required: true }
+          - { label: "תמונה ראשית", name: "hero_image", widget: "image", required: false }
+          - { label: "תוכן", name: "body", widget: "markdown", required: true }
+      - label: "פוביה חברתית"
+        name: "social_phobia"
+        file: "post/social-phobia/index.md"
+        media_folder: "static/uploads/social-phobia"
+        public_folder: "/uploads/social-phobia"
+        fields:
+          - { label: "כותרת", name: "title", widget: "string", required: true }
+          - { label: "תמונה ראשית", name: "hero_image", widget: "image", required: false }
+          - { label: "תוכן", name: "body", widget: "markdown", required: true }
+
+  - name: "questionnaires"
+    label: "שאלונים"
+    folder: "questionnaires"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "שם שאלון", name: "title", widget: "string", required: true }
+      - { label: "תיאור", name: "description", widget: "text", required: false }
+      - { label: "תוכן השאלון", name: "content", widget: "markdown", required: true }
+      - { label: "תאריך יצירה", name: "created_at", widget: "datetime", required: true }
+
+  - name: "authors"
+    label: "מחברים"
+    folder: "authors"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "שם מלא", name: "name", widget: "string", required: true }
+      - { label: "תמונה", name: "avatar", widget: "image", required: false }
+      - { label: "ביוגרפיה", name: "bio", widget: "markdown", required: false }
+      - { label: "קישורים", name: "links", widget: "list", required: false }
+
+taxonomies:
+  - name: "categories"
+    label: "קטגוריות"
+  - name: "tags"
+    label: "תגיות"
