--- a/hugo.toml
+++ b/hugo.toml
@@ -33,8 +33,8 @@ googleAnalytics = ""
 
   [Params.sidebar]
     home = "left"
-    list = "right"
-    single = "right"
+    list = "left"
+    single = "left"
     widgets = ["search", "recent", "categories", "taglist"]
 
   [Params.widgets]
