--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ googleAnalytics = ""
   authorbox = true
   pager = true
   post_meta = ["date", "categories"]
-  mainSections = ["post", "docs"]
+  mainSections = ["posts", "docs"]
 
  [Params.author]
     name = "עמיר אייל"
