--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ defaultContentLanguageInSubdir = false
 
 theme = "Mainroad" # וודא שזה Mainroad!
 
-[Params]
+[params]
   description = "הבלוג האישי שלי על כל דבר"
   opengraph = true
   twitter_cards = false
@@ -27,23 +27,23 @@ theme = "Mainroad" # וודא שזה Mainroad!
   myGithub = "https://github.com/amireyalusername" # קישור מלא לבדיקה
   myRss = true
 
-  [Params.author]
+  [params.author]
     name = "עמיר אייל"
     bio ="פסיכותרפיסט מוסמך למתבגרים, מבוגרים והורים"
     avatar = "img/avatar-amir.jpg"
 
-  [Params.logo]
+  [params.logo]
     image = "img/logo.png"
     title = "הבלוג של עמיר"
     subtitle = "רק עוד אתר ברשת"
 
-  [Params.sidebar]
+  [params.sidebar]
     home = "left"
     list = "right"
     single = "right"
     widgets = ["search", "social", "recent", "categories", "taglist"]
 
-  [Params.widgets]
+  [params.widgets]
     recent_num = 5
     tags_counter = false
 
