--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313/" # שיניתי לקישור מלא ומוחלט לבדיקה
+baseURL = "https://amireyal5.netlify.app/"
 title = "עמיר אייל פסיכותרפיה מתבגרים, מבוגרים והדרכת הורים"
 languageCode = "he"
 defaultContentLanguage = "he"
