--- a/data/services.yaml
+++ b/data/services.yaml
@@ -1,41 +1,41 @@
 - title: "חרדה, לחץ ודיכאון"
   description: "טיפול מותאם להתמודדות עם חרדה, לחץ ודיכאון. זיהוי דפוסים ופיתוח אסטרטגיות יעילות להקלה ולשיפור הרווחה הנפשית."
-  image: "images/anxity.webp"
+  image: "img/anxity.webp"
   alt: "חרדה"
   link: "anxiety.html"
   linkText: "קרא עוד על טיפול בחרדה"
 
 - title: "משברים ושינויי חיים"
   description: "תמיכה רגשית וליווי מקצועי בתקופות משבר ושינוי. עיבוד רגשות, חיזוק משאבי התמודדות וסיוע בבניית עתיד יציב."
-  image: "images/crisis.webp"
+  image: "img/crisis.webp"
   alt: "משבר"
   link: "crisis.html"
   linkText: "קרא עוד על תמיכה בזמן משבר"
 
 - title: "קשיים במערכות יחסים"
   description: "שיפור תקשורת ופתרון קונפליקטים במערכות יחסים. חיזוק הקשרים הזוגיים והמשפחתיים ויצירת אווירה של אמון והבנה."
-  image: "images/relations.webp"
+  image: "img/relations.webp"
   alt: "זוגיות"
   link: "relationships.html"
   linkText: "קרא עוד על טיפול בקשיים במערכות יחסים"
 
 - title: "הדרכת הורים"
   description: "הדרכה וכלים להתמודדות עם אתגרי גידול ילדים. שיפור התקשורת המשפחתית ויצירת אווירה תומכת ומכילה בבית."
-  image: "images/parenting2.webp"
+  image: "img/parenting2.webp"
   alt: "הורים"
   link: "parenting.html"
   linkText: "קרא עוד על הדרכת הורים"
 
 - title: "גירושים סוערים"
   description: "תמיכה רגשית וסיוע בהתמודדות עם גירושים מורכבים. עיבוד רגשות, פיתוח כלים אישיים והגנה על רווחת הילדים."
-  image: "images/hero-divorce.webp"
+  image: "img/hero-divorce.webp"
   alt: "גירושים"
   link: "divorce.html"
   linkText: "קרא עוד על טיפול בגירושים"
 
 - title: "התמודדות עם התמכרויות"
   description: "טיפול רגשי וייעוץ להתמודדות עם התמכרויות. זיהוי גורמים, פיתוח מנגנוני התמודדות ורכישת כלים להחלמה."
-  image: "images/HeroHP.webp"
+  image: "img/HeroHP.webp"
   alt: "התמכרויות"
   link: "addiction.html"
   linkText: "קרא עוד על טיפול בהתמכרויות"
