--- a/data/services.yaml
+++ b/data/services.yaml
@@ -2,7 +2,7 @@
   description: "טיפול מותאם להתמודדות עם חרדה, לחץ ודיכאון. זיהוי דפוסים ופיתוח אסטרטגיות יעילות להקלה ולשיפור הרווחה הנפשית."
   image: "img/anxity.webp"
   alt: "חרדה"
-  link: "anxiety.html"
+  link: "tags/חרדה.html"
   linkText: "קרא עוד על טיפול בחרדה"
 
 - title: "משברים ושינויי חיים"
