--- a/data/services.yaml
+++ b/data/services.yaml
@@ -9,33 +9,33 @@
   description: "תמיכה רגשית וליווי מקצועי בתקופות משבר ושינוי. עיבוד רגשות, חיזוק משאבי התמודדות וסיוע בבניית עתיד יציב."
   image: "img/crisis.webp"
   alt: "משבר"
-  link: "crisis.html"
+  link: "tags/משבר.html"
   linkText: "קרא עוד על תמיכה בזמן משבר"
 
 - title: "קשיים במערכות יחסים"
   description: "שיפור תקשורת ופתרון קונפליקטים במערכות יחסים. חיזוק הקשרים הזוגיים והמשפחתיים ויצירת אווירה של אמון והבנה."
   image: "img/relations.webp"
   alt: "זוגיות"
-  link: "relationships.html"
+  link: "tags/יחסים.html"
   linkText: "קרא עוד על טיפול בקשיים במערכות יחסים"
 
 - title: "הדרכת הורים"
   description: "הדרכה וכלים להתמודדות עם אתגרי גידול ילדים. שיפור התקשורת המשפחתית ויצירת אווירה תומכת ומכילה בבית."
   image: "img/parenting2.webp"
   alt: "הורים"
-  link: "parenting.html"
+  link: "tags/הדרכת הורים.html"
   linkText: "קרא עוד על הדרכת הורים"
 
 - title: "גירושים סוערים"
   description: "תמיכה רגשית וסיוע בהתמודדות עם גירושים מורכבים. עיבוד רגשות, פיתוח כלים אישיים והגנה על רווחת הילדים."
   image: "img/hero-divorce.webp"
   alt: "גירושים"
-  link: "divorce.html"
+  link: "tags/גירושים.html"
   linkText: "קרא עוד על טיפול בגירושים"
 
 - title: "התמודדות עם התמכרויות"
   description: "טיפול רגשי וייעוץ להתמודדות עם התמכרויות. זיהוי גורמים, פיתוח מנגנוני התמודדות ורכישת כלים להחלמה."
   image: "img/HeroHP.webp"
   alt: "התמכרויות"
-  link: "addiction.html"
+  link: "tags/התמכרות.html"
   linkText: "קרא עוד על טיפול בהתמכרויות"
