--- a/data/services.yaml
+++ b/data/services.yaml
@@ -23,7 +23,7 @@
   description: "הדרכה וכלים להתמודדות עם אתגרי גידול ילדים. שיפור התקשורת המשפחתית ויצירת אווירה תומכת ומכילה בבית."
   image: "img/parenting2.webp"
   alt: "הורים"
-  link: "categories/הדרכת הורים.html"
+  link: "categories/הדרכת-הורים.html"
   linkText: "קרא עוד על הדרכת הורים"
 
 - title: "גירושים סוערים"
