--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/amireyal5/amirh#readme",
   "devDependencies": {
-    "pagefind": "^1.3.0"
+    "autoprefixer": "^10.4.21",
+    "pagefind": "^1.3.0",
+    "postcss-cli": "^11.0.1"
   },
   "dependencies": {
     "postcss": "^8.5.5"
